Swagger server update to version 0.5.1
