# rest_api/swagger_server/models/inline_response201.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class InlineResponse201(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: str=None, unit: str=None):  # noqa: E501
+        """InlineResponse201 - a model defined in Swagger
+
+        :param id: The id of this InlineResponse201.  # noqa: E501
+        :type id: str
+        :param unit: The unit of this InlineResponse201.  # noqa: E501
+        :type unit: str
+        """
+        self.swagger_types = {
+            'id': str,
+            'unit': str
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'unit': 'unit'
+        }
+
+        self._id = id
+        self._unit = unit
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse201':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_201 of this InlineResponse201.  # noqa: E501
+        :rtype: InlineResponse201
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this InlineResponse201.
+
+        ID of metric, need to follow this convention: `cpx_{parent_id}_{moving_window_duration}_{interval}`  # noqa: E501
+
+        :return: The id of this InlineResponse201.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this InlineResponse201.
+
+        ID of metric, need to follow this convention: `cpx_{parent_id}_{moving_window_duration}_{interval}`  # noqa: E501
+
+        :param id: The id of this InlineResponse201.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def unit(self) -> str:
+        """Gets the unit of this InlineResponse201.
+
+        Should be the same as in metric identified by parent_id parameter  # noqa: E501
+
+        :return: The unit of this InlineResponse201.
+        :rtype: str
+        """
+        return self._unit
+
+    @unit.setter
+    def unit(self, unit: str):
+        """Sets the unit of this InlineResponse201.
+
+        Should be the same as in metric identified by parent_id parameter  # noqa: E501
+
+        :param unit: The unit of this InlineResponse201.
+        :type unit: str
+        """
+
+        self._unit = unit
